manifest/objects/cwbtool__Apex_Code_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ApexCode</fullName>
                    <default>true</default>
                    <label>Apex Code</label>
                </value>
                <value>
                    <fullName>ApexTestClass</fullName>
                    <label>Apex Test Class</label>
                </value>
                <value>
                    <fullName>RecordTypePicklist</fullName>
                    <label>RecordType Picklist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Batch_Size__c</fullName>
        <defaultValue>&apos;10&apos;</defaultValue>
        <label>Batch Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Connection_ID__c</fullName>
        <label>Connection ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cwbtool__Error__c</fullName>
        <label>Error</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Export_to_Excel__c</fullName>
        <formula>IF(ISPICKVAL(cwbtool__Action_Type__c ,&apos;ApexTestClass&apos;),HYPERLINK(&quot;/apex/cwbtool__VF_ApexClassCodeCoverageDownload?Id=&quot;+ Id+&quot;&amp;from=recDetail&quot;, &quot;Export To Excel&quot;, &quot;_blank&quot;),  
IF(ISPICKVAL(cwbtool__Action_Type__c ,&apos;RecordTypePicklist&apos;),HYPERLINK(&quot;/apex/cwbtool__RecordTypePicklistVisibilityDownload?Id=&quot;+ Id+&quot;&amp;from=recDetail&amp;reportId=&quot;+cwbtool__Request_Analysis_File_Name__c, &quot;Export To Excel&quot;, &quot;_blank&quot;),
HYPERLINK(&quot;/apex/cwbtool__downloadApexCodeAnalysis?Id=&quot;+ Id+&quot;&amp;from=recDetail&quot;, &quot;Export To Excel&quot;, &quot;_blank&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export to Excel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__MetadataContainer_ID__c</fullName>
        <label>MetadataContainer ID</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__Org_Name__c</fullName>
        <label>Org Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Req_Name__c</fullName>
        <label>Req Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Request_Analysis_File_Name__c</fullName>
        <label>Request Analysis File Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Request_ID__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cwbtool__Step_2_ID__c</fullName>
        <label>Step 2 ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Step_2__c</fullName>
        <defaultValue>&apos;In Progress&apos;</defaultValue>
        <label>Step Two</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Reprocess</fullName>
                </value>
                <value>
                    <fullName>Reprocessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Step_One_ID__c</fullName>
        <label>Step One ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Step_One__c</fullName>
        <defaultValue>&apos;In Progress&apos;</defaultValue>
        <label>Step One</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Reprocess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cwbtool__Target_Org_ID__c</fullName>
        <label>Target Org ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__View_Job_Status__c</fullName>
        <formula>HYPERLINK(&quot;/apexpages/setup/listAsyncApexJobs.apexp&quot;, &quot;Click here to view Job status&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Job Status</label>
        <type>Text</type>
    </fields>
    <label>Apex Code Analysis</label>
    <listViews>
        <fullName>cwbtool__All</fullName>
        <columns>NAME</columns>
        <columns>cwbtool__Action_Type__c</columns>
        <columns>cwbtool__Export_to_Excel__c</columns>
        <columns>cwbtool__Start_Date__c</columns>
        <columns>cwbtool__End_Date__c</columns>
        <columns>cwbtool__Step_One__c</columns>
        <columns>cwbtool__Step_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cwbtool__Apex_Test_Class</fullName>
        <columns>NAME</columns>
        <columns>cwbtool__Action_Type__c</columns>
        <columns>cwbtool__Org_Name__c</columns>
        <columns>cwbtool__Export_to_Excel__c</columns>
        <columns>cwbtool__Step_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cwbtool__Action_Type__c</field>
            <operation>equals</operation>
            <value>ApexTestClass</value>
        </filters>
        <label>Apex Test Class</label>
    </listViews>
    <nameField>
        <displayFormat>ACA-{0000}</displayFormat>
        <label>Apex Code Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Code Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>